tests/NormalTests/paczka1/fuzzy1/66699829.err
Error in line 1: tRRw7UK A442 95,8
Error in line 2: tRRw7UK S82 11,7
Error in line 4: tRRw7UK A288 40,8
Error in line 5: 1IR S82 454,2
Error in line 9: p237NjGPYXo A288 96,5
Error in line 16: Y7X A288 216,73
Error in line 11: tRRw7UK S82 86,1
Error in line 3: Y7X A288 89,4
Error in line 17: dcQcRRs A442 53,2
Error in line 36: dcQcRRs S82 67,3
Error in line 31: p237NjGPYXo S633 7,4
